Fixed formatting and grey space on the bottom (hacky though, increased vh to 140 and 200 resp, think this might be due to overflow

--- a/frontend/components/questions/meta.css
+++ b/frontend/components/questions/meta.css
@@ -1,10 +1,12 @@
 .meta_outer {
-    flex: 2.25; 
+    flex-grow: 0; 
+    flex-shrink: 0; 
+    flex-basis: 19rem; 
 }
 .meta_content {
     background-color: #f7f1d5; 
     transform: translateY(55px); 
-    height: 80vh; 
+    height: 65vh; 
     margin: 1rem; 
     margin-right: 1.5rem; 
     border-radius: 5px; 
