--- a/frontend/components/questions/questions.css
+++ b/frontend/components/questions/questions.css
@@ -12,6 +12,10 @@
     transform: translate(0px, 35px);  
 }
 
+body {
+    background-color: white; 
+}
+
 .tag {
     padding: 0.3rem; 
     color: #1c6ba4; 
@@ -37,10 +41,12 @@
     display: flex; 
     flex-direction: row; 
     background-color:white; 
+    height: 200vh; 
 }
 
 .questions_list {
-    transform: translateY(60px)
+    transform: translate(160px, 60px);
+    width: 60vw; 
 }
 
 .questions_list_item {
@@ -76,7 +82,7 @@
 .questions_title {
     font-family: Arial, Helvetica, sans-serif; 
     font-size: 1.7rem; 
-    transform: translate(20px, 40px)
+    transform: translate(180px, 40px)
 }
 
 .ask_question_button {
