--- a/frontend/components/questions/sidebar.css
+++ b/frontend/components/questions/sidebar.css
@@ -3,6 +3,7 @@
     height: 100vh; 
     background-color: white; 
     border-right: 1px solid rgb(208, 208, 208); 
+    position: fixed; 
 }
 
 .home_menu_sidebar {
